# jam

./: Cargo.toml  README.md
src/: cli.rs  main.rs  spotify.rs  traits.rs
src/models/: playlist.rs  track.rs
~/.jam/: credentials.json
