[package]
name = "jam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {version = "1.0.61", features = ["backtrace"]}
async-trait = "0.1.57"
clap = { version = "3.2.17", features = ["derive"] }
colour = "0.6.0"
dirs = "4.0.0"
dyn-clone = "1.0.9"
question = "0.2.2"
rspotify = { version = "0.11.5", features = ["cli"]}
tokio = { version = "1.20.1", features = ["full"] }
